[gd_scene load_steps=2 format=3 uid="uid://c718dtiprfa5o"]

[ext_resource type="Script" path="res://objects/scoreboard_item.gd" id="1_bbk1o"]

[node name="ScoreboardItem" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bbk1o")

[node name="LabelName" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "name"

[node name="LabelKill" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"

[node name="LabelDeath" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
